--- a/content/post/Python_Hello.ipynb
+++ b/content/post/Python_Hello.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---
-date: 2020-05-01
-title: My first blog post
----"
+    "# Hello World"
    ]
   },
   {
